Persist session using passport
implement node passport package to save cookies and persist user logins

edit server to use database pools

configure for deploy

Connect to serverless database

--- a/LL-Volunteer/package.json
+++ b/LL-Volunteer/package.json
@@ -7,13 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node src/server.js",
+    "server": "nodemon src/server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
