--- a/LL-Volunteer/vercel.json
+++ b/LL-Volunteer/vercel.json
@@ -4,8 +4,12 @@
       { "src": "package.json", "use": "@vercel/static-build" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/src/server.js" },
+      { "src": "/(.*)", "dest": "/src" },
       { "src": "/(.*)", "dest": "/dist/$1" }
-    ]
+    ],
+    "rewrites": 
+    [
+      { "source": "/(.*)", "destination": "/src" }
+  ]
   }
   
