--- a/LL-Volunteer/vercel.json
+++ b/LL-Volunteer/vercel.json
@@ -5,7 +5,7 @@
     ],
     "rewrites": 
     [
-      { "source": "/(.*)", "destination": "/src" }
+      { "source": "/(.*)", "destination": "/src/server.js" }
   ]
   }
   
