Revert "Update vercel.json"
This reverts commit 85755d4f523aa8e681f2d966d49222eb7ea39711.

--- a/LL-Volunteer/vercel.json
+++ b/LL-Volunteer/vercel.json
@@ -4,7 +4,7 @@
       { "src": "package.json", "use": "@vercel/static-build" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/src/server.js" },
+      { "src": "/(.*)", "dest": "/src/" },
       { "src": "/(.*)", "dest": "/dist/$1" }
     ]
   }
