Revert "Update vercel.json"
This reverts commit a4d55de51854f2d6df5c2a13c95168e3eeb7398c.

--- a/LL-Volunteer/vercel.json
+++ b/LL-Volunteer/vercel.json
@@ -5,7 +5,7 @@
     ],
     "rewrites": 
     [
-      { "source": "/(.*)", "destination": "/src/server.js" }
+      { "source": "/(.*)", "destination": "/src" }
   ]
   }
   
