Revert "fix vercel config"
This reverts commit d65d9abddbf47932cc5aae404c369e3064aefe95.

--- a/LL-Volunteer/vercel.json
+++ b/LL-Volunteer/vercel.json
@@ -3,6 +3,10 @@
     "builds": [
       { "src": "package.json", "use": "@vercel/static-build" }
     ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/src" },
+      { "src": "/(.*)", "dest": "/dist/$1" }
+    ],
     "rewrites": 
     [
       { "source": "/(.*)", "destination": "/src" }
