Revert "update vercel config"
This reverts commit 9ad5b136ee6a0523cb85185f9b10ad286e899b3c.

--- a/LL-Volunteer/vercel.json
+++ b/LL-Volunteer/vercel.json
@@ -4,12 +4,8 @@
       { "src": "package.json", "use": "@vercel/static-build" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/src" },
+      { "src": "/(.*)", "dest": "/src/server.js" },
       { "src": "/(.*)", "dest": "/dist/$1" }
-    ],
-    "rewrites": 
-    [
-      { "source": "/(.*)", "destination": "/src" }
-  ]
+    ]
   }
   
