--- a/LL-Volunteer/package.json
+++ b/LL-Volunteer/package.json
@@ -1,15 +1,18 @@
 {
   "name": "ll-volunteer",
+  "version": "1.0.0",
+  "description": "Lego League volunteer information system",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node src/server.js",
-    "server": "nodemon src/server.js"
+    "start": "node api/index.js",
+    "server": "nodemon api/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -42,5 +45,15 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ProgramStuff/LL-Volunteer.git"
+  },
+  "author": "Jordan Kelsey",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ProgramStuff/LL-Volunteer/issues"
+  },
+  "homepage": "https://github.com/ProgramStuff/LL-Volunteer#readme"
 }
