--- a/LL-Volunteer/vercel.json
+++ b/LL-Volunteer/vercel.json
@@ -6,7 +6,8 @@
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/api/index.js" },
-      { "src": "/(.*)", "dest": "/index.html" }
+      { "src": "/(.*)", "dest": "/index.html" },
+      { "handle": "filesystem" }
     ]
   }
 
