--- a/package.json
+++ b/package.json
@@ -2,9 +2,49 @@
   "name": "ll-volunteer",
   "version": "1.0.0",
   "description": "Lego League volunteer information system",
+  "private": true,
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "node api/index.js",
+    "server": "nodemon api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@vercel/postgres": "^0.10.0",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "vite": "^5.4.1"
   },
   "repository": {
     "type": "git",
@@ -15,5 +55,8 @@
   "bugs": {
     "url": "https://github.com/ProgramStuff/LL-Volunteer/issues"
   },
-  "homepage": "https://github.com/ProgramStuff/LL-Volunteer#readme"
+  "homepage": "https://github.com/ProgramStuff/LL-Volunteer#readme",
+  "vercel": {
+    "output": "dist"
+  }
 }
