--- a/LL-Volunteer/vercel.json
+++ b/LL-Volunteer/vercel.json
@@ -6,8 +6,8 @@
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/api/index.js" },
-      { "src": "/(.*)", "dest": "/index.html" },
-      { "handle": "filesystem" }
+      { "src": "^/assets/(.*)", "dest": "/assets/$1" },
+      { "src": "^/(?!api).*", "dest": "/index.html" }
     ]
   }
 
